objects/BMCServiceDesk__SYSTemplateLink__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__linkedTemplateId__c</fullName>
        <label>FKLinkedTemplate</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>SYSTemplateLink (FKLinked Template)</relationshipLabel>
        <relationshipName>SYSTemplate_Link</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__orderNumber__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKParentTemplate</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>SYSTemplateLink (FKParent Template)</relationshipLabel>
        <relationshipName>SYSTemplate_Link1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>